# manhattan-pip

./: .gitignore  analyze_compression.py  api_manhattan.py  benchmark_embeddings.py  filtered_files.txt  index.py  mcp_memory_client.py  mcp_memory_server.py  mcp_session_enforcer.py  mcp_socketio_gateway.py  reproduce_flow_optimization.py  test_flow_apis.py  test_retrieval_quality.py  test_skeleton_enrichment.py  verify_dedup.py  verify_ingestion_refactor.py
.github/workflows/: release.yml
.gitmem_coding/: chunks.json  config.json
.gitmem_coding/agents/default/: file_contexts.json  settings.json  vectors.json
.gitmem_coding/index/: global_index.json
manhattan-mcp/: README.md  check_stdout.py  compare_optimizations.py  cython_setup.py  debug_prod_query.py  debug_prod_short_query.py  demo_batch_output.py  err.txt  err_server.txt  gitmem_coding_walkthrough.md  gradio_test_output.txt  mcp.json  pyproject.toml  quick_test.py  repro_index.py  rigorous_test_output.txt  setup.py  simulate_all.py  test_chunking.py  test_complex_coding_memory.py  test_e2e_index_retrieval.py  test_e2e_tools.py  test_e2e_vfs_tools.py  test_flow_direct.py  test_gradio_api.py  test_hard_retrieval.py  test_out.txt  test_out_v3.txt  test_out_v4.txt  test_output.txt  test_retrieval_quality.py  test_rigorous_all_tools.py  test_route_retrieval.py  test_search_truncation.py  test_semantic_chunks_with_vectors.py  test_server_raw.py  test_singletons.py  test_tier1_features.py  test_tier2_features.py  token_optimization_workflow.md  (+1 more)
manhattan-mcp/.gitmem_coding/: chunks.json  config.json
manhattan-mcp/.gitmem_coding/agents/test_agent/: settings.json  vectors.json
manhattan-mcp/.gitmem_data/: config.json
manhattan-mcp/.gitmem_test/: chunks.json  config.json
manhattan-mcp/.gitmem_test/agents/test_agent/: file_contexts.json  settings.json  vectors.json
manhattan-mcp/.gitmem_test/index/: global_index.json
manhattan-mcp/.gitmem_test_all/: chunks.json  config.json
manhattan-mcp/.gitmem_test_all/agents/test_agent/: file_contexts.json  settings.json
manhattan-mcp/.gitmem_test_all/index/: global_index.json
manhattan-mcp/gitmem/: __init__.py  api.py  context_manager.py  hybrid_retriever.py  memory_store.py  object_store.py  test_output.txt  test_vectors.py  vector_store.py
manhattan-mcp/src/.gitmem_coding/: config.json
manhattan-mcp/src/.gitmem_coding/agents/manhattan_mcp/: settings.json
manhattan-mcp/src/.gitmem_coding_test/: chunks.json  config.json
manhattan-mcp/src/.gitmem_coding_test/agents/test-agent/: settings.json
manhattan-mcp/src/manhattan_mcp/: __init__.py  cli.py  rules_templates.py  server.py  server_test.py
manhattan-mcp/src/manhattan_mcp/gitmem/: README.md  __init__.py  api.py  embedding.py  example.py  file_system.py  memory_store.py  models.py  search_mcp_types.py  test_search.py  vector_store.py  verify_imports.py
manhattan-mcp/src/manhattan_mcp/gitmem_coding/: __init__.py  ast_skeleton.py  chunking_engine.py  coding_api.py  coding_file_system.py  coding_hybrid_retriever.py  coding_memory_builder.py  coding_store.py  coding_vector_store.py  models.py
manhattan-mcp/test_coding_env/.gitmem_coding/: config.json
manhattan-mcp/test_coding_env/.gitmem_coding/agents/test_agent/: file_contexts.json  settings.json
manhattan-mcp/test_coding_env/.gitmem_coding/index/: global_index.json
manhattan-mcp/test_e2e_data/: test_script.py
manhattan-mcp/test_gitmem_coding_chunking/: config.json
manhattan-mcp/test_gitmem_data/: chunks.json  config.json  large_file.py
manhattan-mcp/test_gitmem_data/agents/test_agent/: file_contexts.json  settings.json  vectors.json
manhattan-mcp/test_gitmem_data/index/: global_index.json
manhattan-mcp/tests/: verify_path_fix.py
test_gitmem_dedup/: chunks.json  config.json
test_gitmem_dedup/agents/test_agent/: file_contexts.json  settings.json
test_gitmem_dedup/index/: global_index.json
test_gitmem_v2/: chunks.json
test_gitmem_v2/agents/test_flow_agent_001/: vectors.json
test_retrieval_quality_db/: chunks.json  config.json
test_retrieval_quality_db/agents/test_agent/: file_contexts.json  settings.json
test_retrieval_quality_db/index/: global_index.json
