[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmem"
version = "0.0.0"
description = "GitMem MCP Server - Token-Efficient Codebase Navigation for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Agent Architects Studio" }
]
keywords = ["mcp", "gitmem", "memory", "ai", "agent", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
# This allows users to run 'gitmem' in terminal instead of 'manhattan-mcp'
gitmem = "manhattan_mcp.cli:main"

[project.urls]
Homepage = "https://themanhattanproject.ai"
Repository = "https://github.com/agent-architects/gitmem"

# --- SECURITY & BUILD CONFIGURATION ---

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
# This MUST match the folder name in /src exactly
"manhattan_mcp" = ["*.so", "*.pyd"]

[tool.setuptools.exclude-package-data]
# The Kill Switch: Ensures no source code or C files are leaked
"*" = ["*.py", "*.c", "*.cpp", "*.h", "*_test.py"]