[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmem-mcp"
version = "0.0.1"
description = "GitMem MCP Server - Token-Efficient Codebase Navigation for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Agent Architects Studio" }
]
keywords = ["mcp", "gitmem", "memory", "ai", "agent", "llm", "claude", "manhattan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.20.0"
]

[project.scripts]
# Users can still run the server using the gitmem command
gitmem = "manhattan_mcp.cli:main"
gitmem-mcp = "manhattan_mcp.cli:main"

[project.urls]
Homepage = "https://themanhattanproject.ai"
Documentation = "https://themanhattanproject.ai/mcp-docs"

# --- SECURITY & BUILD CONFIGURATION ---

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"manhattan_mcp" = ["*.so", "*.pyd"]

[tool.setuptools.exclude-package-data]
# The Kill Switch: Ensures no source code or C files are leaked
"*" = ["*.py", "*.c", "*.cpp", "*.h", "*_test.py"]